switch to using ${GITHUB_ACTION_PATH}
switch from ${{github.action_path}} to ${GITHUB_ACTION_PATH} so that the path will be correct when called inside a container

--- a/action.yml
+++ b/action.yml
@@ -15,12 +15,12 @@ runs:
   using: "composite"
   steps:
     - uses: actions/setup-python@v2
-    - run: ${{ github.action_path }}/main.sh
+    - run: ${GITHUB_ACTION_PATH}/main.sh
       env:
         ACTION: ${{ inputs.action }}
         SKIP_REINDEX: ${{inputs.skip_reindex}}
       shell: bash
-    - run: ${{ github.action_path }}/main.sh
+    - run: ${GITHUB_ACTION_PATH}/main.sh
       env:
         ACTION: cleanup
       shell: bash
